# DickGrowerBot

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  README_zh-cn.md  Taskfile.yml  announcements.yml  build.rs  docker-compose.override.yml  docker-compose.yml  dokploy.yml
.github/workflows/: binaries.yaml  ci-build.yaml  publish.yaml
.sqlx/: query-01ac819b2c51e5cdba03c3ee8a15a651b86db4dfbd5b8c24a1baa7cbc50404cb.json  query-026f23959b843e9717188c236c796aff43cec07d58ddfb5d2cc273079a32a22e.json  query-049c19d2deee6bdda36bd76e847e41ce5d6083a5ab1d2c19fc5936b547e8d6d2.json  query-05d57df30a23a17f4c7b1e3c130db22564ccaf90ec60ee610c01a4a6054f1773.json  query-06878b94c9ea312199b9488bd29d583b130b0ab06612e054a1080ab2a2cdd314.json  query-074cdfb7e892aca2ce1c96b1e420b991cd15ed44c573c2fdd4de8324de47ae91.json  query-084ae1de7c41b65cb19568c7398dd9d7208f39e810b5da6f3659362a6ae314db.json  query-0902ad48844dd7046abbbde54d24f5e1d123850702a3c85eae40b2ac66c94de2.json  query-0a395aec4d06c00629e6101b9873985ff060522ba62503133edb89725768c111.json  query-0d6be081875911f4b4abe7818e1902409472339ca923be41698e52782c24d3e2.json  query-0e5be5739ac66d3992c6272c1567f7da76fab55acfb597063a34cb9abe7cc08e.json  query-0f3af562d18e418d5f975fb4bc8975d4a1c3993b1a6a8e9da2b5eaed4a07ce58.json  query-1147b841618fbddeb5a4f1f9e134252bba58a3b626299155068b27a0d8227b5b.json  query-17dbefc1e1f2826550641b1d36af9d6a50f6217afe644ea850832d69bb90a285.json  query-1817274ea25af36e35ce8447860d1ce773b6192787b7c4a9c32eff04a54e6123.json  query-1a0fcf7bc727501ef5a481c6ab89ab3946f7a2eb43c7080a2c7bead3979f63af.json  query-1db500aad844ae08ba070f955ba0cf14fa152089c2ec1de8c162f51a1dae2fc9.json  query-28ab401fae811551f533c09806c84dedf77ba2abe24f0d8b314ee9c2fcfe905c.json  query-2a9c98d8f30544449a11d3827e5947909a0b524983639f642e30771882726a88.json  query-2baab3914bbd97a350269ad329c241748d7c38b168e3d1628f5e5103953dbd86.json  query-30655f24abd12f044a2860abf2afc9cd102d8cc2a09b2f23274766b6476112ae.json  query-31c58dd2fb92865e542f63ab0f04a870bee9e9be3eed99c1ec243f88a6fcabbb.json  query-33e0e871a7a6cfd0972b06bba03123e814442a09e1e8a6a5936c02dea63be966.json  query-35ea8e589ab66d28179266fc264d462ef6df6b6050426cd5c15efd6f6909daa1.json  query-39ee61860709c8e5f1edbadc4702a5d0d534064d3bc7acbaba219e67c4ea3bef.json  query-3fa2baff418bf9a51c163119440c583cc3bb976d289d1b50c5bbc95e64016446.json  query-4079c268a863593fca4c7bde9b456b9cf6b89ed0b113fe039d49476f3264f9c6.json  query-41a7919d776604f7eecd8966c2621070dbb25c5ffb67d472ee1b90e96c2274d6.json  query-43bb2391b401266a2d8b4de6e35ede1433942b790640b8e813f89ac62674a9f9.json  query-4fb517e12f12efcd0f32cd7f3d88cee47ceaf41482fa8dae0bddc709aa13eef4.json  query-51216af97a496282b4c6955f863bad14fcd4d2967f41c30e3083e200b42f0eb9.json  query-5208c529f037af3be8532ac3094c728193501939d4edbfcdd28b07487aeb5bb3.json  query-5630fe18205b816b11b891fdb755b06d91e9462b2d9ec9c7133a7755c996e8f7.json  query-56e9086ea7f6ef07d940de931ff36440c5bc61052a0e8da2f48f875e1e649b03.json  query-592e4ff3dd3a6463e1b57005fb476eab7000dabb1675138b2af8148081f541b5.json  query-5a1d6fabb1c94929029cff0df94441fe48dcbe8b80f2d79c5392f86f21594a70.json  query-5b8ae956e33ffb777434d47740a84aaa8c16531a2b79b3a4d67784bb70e8c697.json  query-61786ffbe277265b45feb91be0ab8abdf9fae7ac74ddd817c7aa5de735515bbc.json  query-6297d2d93fffa2e6ed537fe78a4aa8e0193e5b6844581c0bd4407af38b861d2f.json  query-62acfff173f54e2079bf5a2a6a79fd90b5ae05e5d7a90c2ffca09230d2871265.json  (+66 more)
domain_types/: Cargo.toml
domain_types/src/: errors.rs  lib.rs  traits.rs
domain_types_macro/: Cargo.toml
domain_types_macro/src/: lib.rs
domain_types_macro/tests/: domain_type_test.rs
locales/: en.yml  fa.yml  it.yml  ru.yml  zh-TW.yml  zh.yml
macro_test/: Cargo.toml
macro_test/src/: main.rs
metrics_macro/: Cargo.toml
metrics_macro/src/: lib.rs
migrations/: 10_create-chats-table.sql  11_dicks-idx-length.sql  12_dicks-fix-pk.sql  13_chats-drop-type.sql  14_dicks-fk-chats.sql  15_create-loans-table.sql  16_add-loans-column-payout-ratio.sql  17_add-battle_stats-table.sql  18_add-restrictions-on-promo-codes-format.sql  19_create-announcements-table.sql  1_create-users-table.sql  20_long-user-names.sql  21_bigint-length-debt.sql  22_add-more-languages.sql  23_allow-cyrillic-promo-codes.sql  24_add-promo-activations-column-activated-at.sql  25_add-chats-settings.sql  26_dod-fk-chats.sql  2_create-dicks-table.sql  5_create-promocodes-table.sql  6_fix-dod-trigger.sql  7_add-users-column-created-at.sql  8_fix-dicks-trigger-updated-at.sql  9_add-dicks-index-chat-id.sql  V1__create_dicks_table.sql  V2__create_users_table.sql  V3__create_dod_table.sql  V4__create_imports_table.sql
postgres/: init-user-service-db.sh
src/: commands.rs  config.rs  error_handler.rs  main.rs  metrics.rs  observability.rs
src/config/: announcements.rs  app.rs  bot.rs  env.rs  help.rs  integrations.rs  mod.rs  peezy.rs  self_destruction.rs  toggles.rs
src/domain/: counter.rs  debt.rs  errors.rs  id.rs  langcode.rs  macros.rs  mod.rs  ratio.rs  username.rs
src/domain/objects/: announcement.rs  chat.rs  dick.rs  loan.rs  mod.rs  stats.rs  tghack.rs  user.rs
src/domain/primitives/: debt.rs  hash.rs  langcode.rs  length.rs  macros.rs  mod.rs  numbers.rs  pagination.rs  position.rs  promo.rs  ratio.rs  username.rs  validators.rs
src/handlers/: dick.rs  dod.rs  help.rs  import.rs  inline.rs  language.rs  loan.rs  mod.rs  perks.rs  promo.rs  pvp.rs  start.rs  stats.rs
src/handlers/privacy/: en.html  fa.html  it.html  mod.rs  ru.html  zh.html
src/handlers/utils/: callbacks.rs  eggplant.rs  incrementor.rs  locks.rs  mod.rs  page.rs  self_destruction.rs  tghack.rs  username.rs
src/help/: en.html  en.md  fa.html  it.html  mod.rs  ru.html  ru.md  zh.html
src/repo/: announcements.rs  chats.rs  dicks.rs  import.rs  imports.rs  loans.rs  mod.rs  promo.rs  pvpstats.rs  stats.rs  users.rs
src/repo/test/: announcements.rs  chats.rs  dicks.rs  import.rs  loans.rs  mod.rs  promo.rs  pvpstats.rs  stats.rs  users.rs
src/users/: mock.rs  mod.rs
(+3 files in other folders)
