[package]
name = "dick-grower-bot"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros", "webhooks-axum"] }
log = "0.4"
pretty_env_logger = "0.5.0"
tokio = { version =  "1.32.0", features = ["rt-multi-thread", "macros"] }
reqwest = "0.11.17"
once_cell = "1.17.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.96"
axum = "0.6.18"
axum-prometheus = "0.4.0"
hyper = "1.0.0-rc.3"
futures = "0.3.28"
prometheus = "0.13.3"
rust-i18n = "2.1.0"
async-trait = "0.1.68"
anyhow = "1.0.71"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "chrono" ] }
rand = "0.8.5"
dotenvy = "0.15.7"
regex = "1.9.5"
strum = "0.25.0"
strum_macros = "0.25.2"
chrono = { version = "0.4.31", features = [ "serde" ] }
tinytemplate = "1.2.1"
base64 = { package = "simple-base64", version = "0.23.2" }
byteorder = "1.5.0"
derive_more = { version = "1.0.0-beta.6", features = ["display", "error"] }

[dev-dependencies]
testcontainers = "0.15.0"
