[package]
name = "dick-grower-bot"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Telegram Bot framework and localization library
teloxide = { git = "https://github.com/LasterAlex/teloxide/", default-features = false, features = ["macros", "webhooks-axum", "rustls", "ctrlc_handler"] }
rust-i18n = "3.1.2"
# Asynchronous runtime, web server, metrics
tokio = { version =  "1.42.0", default-features = false, features = ["rt-multi-thread", "macros"] }
axum = "0.7.9"
axum-prometheus = "0.8.0"
prometheus = "0.13.4"
# Logging and envs
log = "0.4.22"
pretty_env_logger = "0.5.0"
dotenvy = "0.15.7"
# Database and SQL
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "postgres", "chrono", "tls-rustls" ] }
# HTTP client with caching
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "json"] }
# Serialization / deserialization
serde = { version = "1.0.217", features = ["derive"] }
# HTML and templates
tinytemplate = "1.2.1"
# Derive macros
strum = "0.27.1"
strum_macros = "0.27.1"
derive_more = { version = "2.0.1", features = ["display", "from", "constructor", "error", "from_str", "add", "mul", "not", "add_assign", "mul_assign"] }
anyhow = { version = "1.0.95", features = ["backtrace"] }
# Other basic stuff
regex = "1.11.1"
rand = "0.8.5"
chrono = { version = "0.4.39", features = [ "serde" ] }
base64 = "0.22.1"
byteorder = "1.5.0"
flurry = "0.5.2"
sha2 = "0.10.8"
unicode-general-category = "1.0.0"
# Rust specific stuff
once_cell = "1.20.2"
futures = "0.3.31"
async-trait = "0.1.84"
num-traits = "0.2.19"
downcast-rs = "2.0.1"
macro_rules_attribute = "0.2.0"
# Local subcrates
domain_types = { version = "0.1.0", path = "domain_types" }
domain_types_macro = { version = "0.1.0", path = "domain_types_macro" }

[dev-dependencies]
testcontainers = "0.23.1"
