[workspace]
members = ["domain_types", "domain_types_macro"]

[package]
name = "dick-grower-bot"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Telegram Bot framework and localization library
teloxide = { version = "0.17.0", default-features = false, features = ["macros", "webhooks-axum", "rustls", "ctrlc_handler"] }
rust-i18n = "4.2.1"
# Asynchronous runtime, web server, metrics
tokio = { version =  "1.53.1", default-features = false, features = ["rt-multi-thread", "macros"] }
axum = "0.8.9"
axum-prometheus = "0.10.0"
prometheus = "0.14.0"
# Logging and envs
log = "0.4.33"
pretty_env_logger = "0.5.0"
dotenvy = "0.15.7"
# Database and SQL
sqlx = { version = "0.9.0", features = [ "runtime-tokio", "postgres", "chrono", "tls-rustls", "macros" ] }
# gRPC client
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
# HTTP client with caching
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json"] }
# Serialization / deserialization
serde = { version = "1.0.229", features = ["derive"] }
serde-saphyr = "0.0.29"
# HTML and templates
tinytemplate = "1.2.1"
# Derive macros
strum = "0.28.0"
strum_macros = "0.28.0"
derive_more = { version = "2.1.1", features = ["display", "from", "constructor", "error", "from_str", "add", "mul", "not", "add_assign", "mul_assign"] }
anyhow = { version = "1.0.104", features = ["backtrace"] }
# Other basic stuff
regex = "1.13.1"
rand = "0.10.2"
chrono = { version = "0.4.45", features = [ "serde" ] }
base64 = "0.22.1"
byteorder = "1.5.0"
flurry = "0.5.2"
sha2 = "0.11.0"
unicode-general-category = "1.1.0"
# Rust specific stuff
once_cell = "1.21.4"
futures = "0.3.33"
async-trait = "0.1.91"
num-traits = "0.2.19"
downcast-rs = "2.0.2"
# Local subcrates
domain_types = { version = "0.1.0", path = "domain_types" }
domain_types_macro = { version = "0.1.0", path = "domain_types_macro" }

[dev-dependencies]
testcontainers = "0.27.3"

[build-dependencies]
tonic-prost-build = "0.14"
