[package]
name = "domain_types_macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = "2.0.101"
quote = "1.0.40"
proc-macro2 = "1.0.95"

derive_more = { version = "2.0.1", features = ["display", "from", "constructor", "error", "from_str", "add", "mul", "not", "add_assign", "mul_assign"] }
sqlx = { version = "0.8.5", features = ["macros"] }

domain_types = { version = "0.1.0", path = "../domain_types" }
